add the handles view

--- a/GameEditor/Base.lproj/MainMenu.xib
+++ b/GameEditor/Base.lproj/MainMenu.xib
@@ -346,6 +346,9 @@
                                     <action selector="saveAction:" target="494" id="h5y-VK-7Ka"/>
                                 </connections>
                             </button>
+                            <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="suo-YO-fqM" customClass="HandlesView">
+                                <rect key="frame" x="145" y="162" width="251" height="208"/>
+                            </customView>
                         </subviews>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="k1U-YT-dMh" secondAttribute="bottom" constant="20" symbolic="YES" id="2hY-6I-iow"/>
@@ -368,6 +371,7 @@
         <customObject id="494" customClass="AppDelegate">
             <connections>
                 <outlet property="_arrayController" destination="MHP-mB-ED2" id="WIV-gD-tYo"/>
+                <outlet property="_handlesView" destination="suo-YO-fqM" id="D5W-Hu-pTw"/>
                 <outlet property="_tableView" destination="tum-wb-Po7" id="pz9-7M-hmt"/>
                 <outlet property="skView" destination="BAm-0B-vb9" id="MCo-T6-F5E"/>
                 <outlet property="window" destination="371" id="532"/>
